github and linkedin links. Added about me page

--- a/fresh-hops.html
+++ b/fresh-hops.html
@@ -9,8 +9,14 @@
 </head>
 <body>
   <div id="header">
-    <h1><a class="title" href='./index.html'>Patrick Nelson</a></h1>
+    <h1>Patrick Nelson</h1>
     <h2>Full Stack Software Developer</h2>
+    <div class="nav"> 
+      <a class="navText" href="./index.html">Projects</a>
+      <a class="navText" href="./index.html">About Me</a>
+      <a href="https://www.linkedin.com/in/patrick-nelson1/" target="_blank"><img src="./images/linkedIn-logo.png" height="25px"/></a>
+      <a href="https://github.com/patrickrnelson" target="_blank"><img src="./images/github.png" height="25px"/></a>
+    </div>
   </div>
 
   <div class="detailPageWrapper">
@@ -24,6 +30,20 @@
         designate whether or not they liked a beer, and receive recommendations for new beers to try based on their liked beers. 
         The recommendations are served using a custom algorithm that I developed.
       </p>
+    </div>
+    <div class="images">
+      <img src="./images/login-page.png" height="650px"/>
+    </div>
+    <div>
+      <p>Built using:</p>
+    </div>
+    <div class="logos">
+      <img src="./images/react-js-blog-header.png" alt="react.js logo" height="50px"/>
+      <img src="./images/redux-logo.png" alt="redux logo" height="50px"/>
+      <img src="./images/redux-saga.png" alt="redux sagas logo" height="50px"/>
+      <img src="./images/nodejs-logo.png" alt="node.js logo" height="50px"/>
+      <img src="./images/postgresql-logo.png" alt="postgresql logo" height="50px"/>
+      <img src="./images/material-ui-logo.png" alt="material ui logo" height="50px"/>
     </div>
   </div>
 </body>
