--- a/movie-sagas.html
+++ b/movie-sagas.html
@@ -9,8 +9,14 @@
 </head>
 <body>
   <div id="header">
-    <h1><a class="title" href='./index.html'>Patrick Nelson</a></h1>
+    <h1>Patrick Nelson</h1>
     <h2>Full Stack Software Developer</h2>
+    <div class="nav"> 
+      <a class="navText" href="./index.html">Projects</a>
+      <a class="navText" href="./index.html">About Me</a>
+      <a href="https://www.linkedin.com/in/patrick-nelson1/" target="_blank"><img src="./images/linkedIn-logo.png" height="25px"/></a>
+      <a href="https://github.com/patrickrnelson" target="_blank"><img src="./images/github.png" height="25px"/></a>
+    </div>
   </div>
 
   <div>
