messing around with colors

--- a/fresh-hops.html
+++ b/fresh-hops.html
@@ -32,7 +32,9 @@
       </p>
     </div>
     <div class="images">
-      <img src="./images/login-page.png" height="650px"/>
+      <img src="./images/homepage_iphone.png" height="500px"/>
+      <img src="./images/welcome-search.png" height="500px"/>
+      <img src="./images/beer_details.png" height="500px"/>
     </div>
     <div>
       <p>Built using:</p>
