--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div id="header">
-    <h1>Patrick Nelson</h1>
-    <h2>Full Stack Software Developer</h2>
+    <h1 class="h1">Patrick Nelson</h1>
+    <h2 class="h2">Full Stack Software Developer</h2>
     <div class="nav"> 
       <a class="navText" href="./index.html">Projects</a>
       <a class="navText" href="./about-me.html">About Me</a>
