--- a/about-me.html
+++ b/about-me.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div id="header">
-    <h1>Patrick Nelson</h1>
-    <h2>Full Stack Software Developer</h2>
+    <h1 class="h1">Patrick Nelson</h1>
+    <h2 class="h2">Full Stack Software Developer</h2>
     <div class="nav"> 
       <a class="navText" href="./index.html">Projects</a>
       <a class="navText" href="./about-me.html">About Me</a>
@@ -18,7 +18,7 @@
       <a href="https://github.com/patrickrnelson" target="_blank"><img src="./images/github.png" height="25px"/></a>
     </div>
   </div>
-  
+
   <div>
     <p>ABOUT ME PATRICK NELSON</p>
   </div>
