--- a/about-me.html
+++ b/about-me.html
@@ -12,8 +12,8 @@
     <h1 class="h1">Patrick Nelson</h1>
     <h2 class="h2">Full Stack Software Developer</h2>
     <div class="nav"> 
-      <a class="navText" href="./index.html">Projects</a>
-      <a class="navText" href="./about-me.html">About Me</a>
+      <a class="navText" href="./index.html">PROJECTS</a>
+      <a class="navText" href="./about-me.html" style="color:white;">ABOUT ME</a>
       <a href="https://www.linkedin.com/in/patrick-nelson1/" target="_blank"><img src="./images/linkedIn-logo.png" height="25px"/></a>
       <a href="https://github.com/patrickrnelson" target="_blank"><img src="./images/github.png" height="25px"/></a>
     </div>
