about me built out

--- a/about-me.html
+++ b/about-me.html
@@ -19,8 +19,21 @@
     </div>
   </div>
 
-  <div>
-    <p>ABOUT ME PATRICK NELSON</p>
+  <div class="pageContainer">
+    <div class="aboutContainer">
+      <h3 class="aboutTitle">Hey-o! My name is Patrick and I am stoked that you are here. You can see more about me below, and please feel free to connect with me on <a href="https://www.linkedin.com/in/patrick-nelson1/" target="_blank" class="linkedInLink">LinkedIn</a> if you would like to chat more!</h3>
+      <p class="aboutText"> 💻  Software Developer </p>
+      <p class="aboutText"> 👀 Looking For Work </p>
+      <p class="aboutText"> 🏙️ Living in Minneapolis with my Fiancée 👩‍❤️‍👨 </p>
+      <p class="aboutText"> 🐶  We love our dog, Willow</p>
+      <p class="aboutText"> 🐈  🐈 We tolerate our two cats, Nelson and Maxwell</p>
+      <p class="aboutText">🚴 I Love biking to explore the city, 🍔 eating good food, 🍻 and drinking good beer. </p>
+      <p></p>
+      <p class="aboutText">Cheers!</p>
+    </div>
+    <div class="picture">
+      <img src="images/DSC07682.jpg" width="400px" />
+    </div>
   </div>
 </body>
 </html>
