--- a/movie-sagas.html
+++ b/movie-sagas.html
@@ -26,6 +26,10 @@
       <h3 class="detailsTitle movies">MovieSagas</h3>
     </div>
 
+    <div class="linksToProjectDiv">
+      <a href="https://github.com/patrickrnelson/movie-sagas-weekend" target="_blank" class="projectLink">See the code on GitHub</a>
+    </div>
+
     <div class="images">
       <div class="movieImg" data-aos="fade-right" data-aos-duration="500" data-aos-offset="200"	> <img src="./images/MovieListPage.png"  height="500px"/></div>
       <div class="movieImg" data-aos="fade-left" data-aos-duration="500" data-aos-offset="300"	> <img src="./images/MovieDetailsPage.png"  height="500px"/></div>
