--- a/fresh-hops.html
+++ b/fresh-hops.html
@@ -26,6 +26,15 @@
       <h3 class="detailsTitle freshHops">Fresh Hops</h3>
     </div>
 
+    <div class="linksToProjectDiv">
+      <a href="http://fresh-hops.herokuapp.com/#/" target="_blank" class="projectLink">View the App</a>
+      <a href="https://github.com/patrickrnelson/fresh-hops-solo" target="_blank" class="projectLink">See the code on GitHub</a>
+    </div>
+
+    <div>
+      
+    </div>
+
     <div class="images">
       <div data-aos="fade-up" data-aos-duration="500" data-aos-offset="200"	> <img src="./images/login-page.png"  height="500px"/></div>
       <div data-aos="fade-up" data-aos-duration="500" data-aos-offset="300"	> <img src="./images/homepage.png"  height="500px"/></div>
