New page for NOTN project

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
     </div>
 
     <div class="projectArea">
+      <h4 class="projectTitle" id="notn">Nature of the North</h4>
+      <p class="projectDescription" id="notnDesc">Client Project. React application for climbing leagues that allows users to enter climbs and see their scores.</p>
+      <a class="link" href="./notn.html">Details</a>
+    </div>
+
+    <div class="projectArea">
       <h4 class="projectTitle" id="movieSagas">Movie Sagas</h4>
       <p class="projectDescription" id="movieDesc">Weekend sprint. Full stack application that uses React, Redux, and Redux sagas</p>
       <a class="link" href="./movie-sagas.html">Details</a>
