--- a/notn.html
+++ b/notn.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   
-  <title>Fresh Hops FS App</title>
+  <title>NOTN Client Project</title>
 </head>
 <body>
   <div id="header">
@@ -23,16 +23,15 @@
 
   <div class="detailPageWrapper">
     <div class="detailPageTitleDiv">
-      <h3 class="detailsTitle freshHops">Fresh Hops</h3>
-      <img 
-        src="https://images.creativemarket.com/0.1.0/ps/2889213/600/400/m1/fpnw/wm0/zdqaf6hi0uarrkccaer5wiyxufqblvcuc6lmh8sahffmftdybuzexhckyrvtuts8-.jpg?1498334639&s=29d6a93972e8d8e8cc3f2175c01f42c0" 
-        alt="Fresh Hops Logo" 
-        width=180/>
+      
+      <h3 class="detailsTitle notn">Nature of the North</h3>
+      <img src="./images/Fill_Logo.png" alt="Nature of the North Logo" width=160/>
     </div>
 
     <div class="linksToProjectDiv">
-      <a href="http://fresh-hops.herokuapp.com/#/" target="_blank" class="projectLink">View the App</a>
-      <a href="https://github.com/patrickrnelson/fresh-hops-solo" target="_blank" class="projectLink">See the code on GitHub</a>
+      <a href="https://notn-leagues.herokuapp.com/#/home" target="_blank" class="natureProjectLink">View the App</a>
+      <a href="https://github.com/patrickrnelson/leagues-application" target="_blank" class="natureProjectLink">See the code on GitHub</a>
+      <a href="http://natureofthenorth.co/" target="_blank" class="natureProjectLink">NOTN Website</a>
     </div>
 
     <div>
@@ -40,16 +39,17 @@
     </div>
 
     <div class="images">
-      <div data-aos="fade-up" data-aos-duration="500" data-aos-offset="200"	> <img src="./images/login-page.png"  height="500px"/></div>
-      <div data-aos="fade-up" data-aos-duration="500" data-aos-offset="300"	> <img src="./images/homepage.png"  height="500px"/></div>
-      <div data-aos="fade-up" data-aos-duration="500" data-aos-offset="400"	> <img src="./images/my-beers.png"  height="500px"/></div>
+      <div data-aos="fade-up" data-aos-duration="500" data-aos-offset="200"	> <img src="./images/Start_Session_phone.jpg"  height="500px"/></div>
+      <div data-aos="fade-up" data-aos-duration="500" data-aos-offset="300"	> <img src="./images/Climb_Session_phone.jpg"  height="500px"/></div>
+      <div data-aos="fade-up" data-aos-duration="500" data-aos-offset="400"	> <img src="./images/Leaderboard_phone.jpg"  height="500px"/></div>
     </div>
 
     <div class="detailsDescription">
       <p>
-        Fresh Hops is my solo project built for Prime Digital Academy. The app allows users to track beers that they drink, 
-        designate whether or not they liked a beer, and receive recommendations for new beers to try based on their liked beers. 
-        The recommendations are served using a custom algorithm that I developed.
+        Client project for Prime Digital Academy. We worked with Nature of the North to develop an application for their bouldering leagues. The client wanted climbers 
+        in the league to be able to track their climbs every week and submit certain climbs to go towards their team's score. They also wanted a leaderboard so the teams 
+        would have visibility into how their team is doing in comparison to other teams in the league. There is also admin functionality that allows the admin to see each 
+        team, their climbers, all of the climbs, and mark whether or not the team has paid their league dues.
       </p>
     </div>
 
